#
# Copyright (C) 2025 EPAM Systems, Inc.
#
# SPDX-License-Identifier: Apache-2.0
#

# ######################################################################################################################
# Target name
# ######################################################################################################################

set(TARGET_NAME smcontroller)

# ######################################################################################################################
# Headers
# ######################################################################################################################

set(HEADERS itf/instancestatusreceiver.hpp itf/logprovider.hpp itf/sender.hpp itf/sminforeceiver.hpp
            itf/updateimageprovider.hpp
)

# ######################################################################################################################
# Target
# ######################################################################################################################

add_module(TARGET_NAME ${TARGET_NAME} HEADERS ${HEADERS})

# ######################################################################################################################
# Tests
# ######################################################################################################################

if(WITH_TEST)
    add_subdirectory(tests)
endif()
