#
# Copyright (C) 2025 EPAM Systems, Inc.
#
# SPDX-License-Identifier: Apache-2.0
#

# ######################################################################################################################
# Target properties
# ######################################################################################################################

set(TARGET_NAMESPACE ${TARGET_NAMESPACE}::tests)
set(TARGET_PREFIX ${TARGET_PREFIX}_tests)

# ######################################################################################################################
# Modules
# ######################################################################################################################

add_subdirectory(mocks)
