#
# Copyright (C) 2025 EPAM Systems, Inc.
#
# SPDX-License-Identifier: Apache-2.0
#

# ######################################################################################################################
# Target name
# ######################################################################################################################

set(TARGET_NAME updatemanager)

# ######################################################################################################################
# Headers
# ######################################################################################################################

set(HEADERS itf/sender.hpp itf/updatemanager.hpp updatemanager.hpp unitstatushandler.hpp)

# ######################################################################################################################
# Sources
# ######################################################################################################################

set(SOURCES unitstatushandler.cpp updatemanager.cpp)

# ######################################################################################################################
# Target
# ######################################################################################################################

add_module(
    TARGET_NAME
    ${TARGET_NAME}
    LOG_MODULE
    STACK_USAGE
    ${AOS_STACK_USAGE}
    SOURCES
    ${SOURCES}
    HEADERS
    ${HEADERS}
    LIBRARIES
    ${LIBRARIES}
)

# ######################################################################################################################
# Tests
# ######################################################################################################################

if(WITH_TEST)
    add_subdirectory(tests)
endif()
