#
# Copyright (C) 2025 EPAM Systems, Inc.
#
# SPDX-License-Identifier: Apache-2.0
#

# ######################################################################################################################
# Target name
# ######################################################################################################################

set(TARGET_NAME iamclient)

# ######################################################################################################################
# Headers
# ######################################################################################################################

set(HEADERS
    itf/certhandler.hpp
    itf/certprovider.hpp
    itf/currentnodeinfoprovider.hpp
    itf/identprovider.hpp
    itf/nodehandler.hpp
    itf/nodeinfoprovider.hpp
    itf/permhandler.hpp
    itf/permprovider.hpp
)

# ######################################################################################################################
# Target
# ######################################################################################################################

add_module(TARGET_NAME ${TARGET_NAME} HEADERS ${HEADERS})

# ######################################################################################################################
# Tests
# ######################################################################################################################

if(WITH_TEST)
    add_subdirectory(tests)
endif()
