#
# Copyright (C) 2025 EPAM Systems, Inc.
#
# SPDX-License-Identifier: Apache-2.0
#

# ######################################################################################################################
# Target name
# ######################################################################################################################

set(TARGET_NAME monitoring)

# ######################################################################################################################
# Headers
# ######################################################################################################################

set(HEADERS itf/instanceinfoprovider.hpp itf/instancemonitoringprovider.hpp itf/instanceparamsprovider.hpp
            itf/monitoring.hpp itf/sender.hpp itf/nodemonitoringprovider.hpp
)

# ######################################################################################################################
# Target
# ######################################################################################################################

add_module(TARGET_NAME ${TARGET_NAME} HEADERS ${HEADERS})

# ######################################################################################################################
# Tests
# ######################################################################################################################

if(WITH_TEST)
    add_subdirectory(tests)
endif()
