#
# Copyright (C) 2025 EPAM Systems, Inc.
#
# SPDX-License-Identifier: Apache-2.0
#

# ######################################################################################################################
# Target name
# ######################################################################################################################

set(TARGET_NAME monitoring)

# ######################################################################################################################
# Sources
# ######################################################################################################################

set(SOURCES alertprocessor.cpp)

# ######################################################################################################################
# Headers
# ######################################################################################################################

set(HEADERS itf/instanceinfoprovider.hpp itf/instancemonitoringprovider.hpp itf/instanceparamsprovider.hpp
            itf/monitoring.hpp itf/sender.hpp itf/nodemonitoringprovider.hpp
)

# ######################################################################################################################
# Libraries
# ######################################################################################################################

set(LIBRARIES aos::core::common::tools)

# ######################################################################################################################
# Target
# ######################################################################################################################

add_module(
    TARGET_NAME
    ${TARGET_NAME}
    LOG_MODULE
    STACK_USAGE
    ${AOS_STACK_USAGE}
    SOURCES
    ${SOURCES}
    HEADERS
    ${HEADERS}
    LIBRARIES
    ${LIBRARIES}
)

# ######################################################################################################################
# Tests
# ######################################################################################################################

if(WITH_TEST)
    add_subdirectory(tests)
endif()
