#
# Copyright (C) 2025 EPAM Systems, Inc.
#
# SPDX-License-Identifier: Apache-2.0
#

# ######################################################################################################################
# Target name
# ######################################################################################################################

set(TARGET_NAME ocispec)

# ######################################################################################################################
# Headers
# ######################################################################################################################

set(HEADERS itf/common.hpp itf/componentconfig.hpp itf/imagespec.hpp itf/ocispec.hpp itf/runtimespec.hpp
            itf/serviceconfig.hpp
)

# ######################################################################################################################
# Target
# ######################################################################################################################

add_module(TARGET_NAME ${TARGET_NAME} HEADERS ${HEADERS})

# ######################################################################################################################
# Tests
# ######################################################################################################################

if(WITH_TEST)
    add_subdirectory(tests)
endif()
