#
# Copyright (C) 2025 EPAM Systems, Inc.
#
# SPDX-License-Identifier: Apache-2.0
#

# ######################################################################################################################
# Target name
# ######################################################################################################################

set(TARGET_NAME types)

# ######################################################################################################################
# Headers
# ######################################################################################################################

set(HEADERS
    alerts.hpp
    certificates.hpp
    desiredstatus.hpp
    envvars.hpp
    log.hpp
    monitoring.hpp
    obsolete.hpp
    permissions.hpp
    provisioning.hpp
    state.hpp
    unitconfig.hpp
    unitstatus.hpp
)

# ######################################################################################################################
# Target
# ######################################################################################################################

add_module(TARGET_NAME ${TARGET_NAME} HEADERS ${HEADERS})

# ######################################################################################################################
# Tests
# ######################################################################################################################

if(WITH_TEST)
    add_subdirectory(tests)
endif()
