#
# Copyright (C) 2025 EPAM Systems, Inc.
#
# SPDX-License-Identifier: Apache-2.0
#

# ######################################################################################################################
# Target name
# ######################################################################################################################

set(TARGET_NAME certhandler)

# ######################################################################################################################
# Sources
# ######################################################################################################################

set(SOURCES certhandler.cpp certmodule.cpp)

# ######################################################################################################################
# Headers
# ######################################################################################################################

set(HEADERS itf/certhandler.hpp itf/hsm.hpp itf/storage.hpp certhandler.hpp certmodule.hpp)

# ######################################################################################################################
# Libraries
# ######################################################################################################################

set(LIBRARIES aos::core::iam::certmodules::pkcs11 aos::core::common::tools)

# ######################################################################################################################
# Target
# ######################################################################################################################

add_module(
    TARGET_NAME
    ${TARGET_NAME}
    LOG_MODULE
    STACK_USAGE
    ${AOS_STACK_USAGE}
    SOURCES
    ${SOURCES}
    HEADERS
    ${HEADERS}
    LIBRARIES
    ${LIBRARIES}
)

# ######################################################################################################################
# Cert modules
# ######################################################################################################################

add_subdirectory(certmodules)

# ######################################################################################################################
# Tests
# ######################################################################################################################

if(WITH_TEST AND (WITH_MBEDTLS OR WITH_OPENSSL))
    add_subdirectory(tests)
endif()
