#
# Copyright (C) 2025 EPAM Systems, Inc.
#
# SPDX-License-Identifier: Apache-2.0
#

####################################################################################################################
# Ident modules
# ######################################################################################################################

add_subdirectory(identmodules)
