#
# Copyright (C) 2025 EPAM Systems, Inc.
#
# SPDX-License-Identifier: Apache-2.0
#

# ######################################################################################################################
# Target name
# ######################################################################################################################

set(TARGET_NAME identhandler)

# ######################################################################################################################
# Headers
# ######################################################################################################################

set(HEADERS identmodule.hpp)

# ######################################################################################################################
# Target
# ######################################################################################################################

add_module(TARGET_NAME ${TARGET_NAME} HEADERS ${HEADERS})

# ######################################################################################################################
# Ident modules
# ######################################################################################################################

add_subdirectory(identmodules)
